@@ -1,7 +1,7 @@
 package uni.miskolc.ips.ilona.client.mobile.filtering.service;
 
 import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.List;
 
 import uni.miskolc.ips.ilona.client.mobile.filtering.core.model.WiFiRSSIObservation;
 import uni.miskolc.ips.ilona.client.mobile.filtering.core.service.WiFiRSSIFilter;
@@ -21,9 +21,9 @@ public class HorusFilter extends WiFiRSSIFilter {
      * Filters the RSSI values of the observation.
      */
 	@Override
-	public WiFiRSSIObservation filter(LinkedList<WiFiRSSIObservation> observation) {
+	public WiFiRSSIObservation filter(List<WiFiRSSIObservation> observation) {
 		 if (observation.size() < memsize) {
-	            return observation.getFirst();
+	            return observation.get(0);
 	        }
 		 WiFiRSSIObservation result= new WiFiRSSIObservation();
 	        for (String ssid : getKeys(observation)) {
